# ROBOT-KINEMATICS

./: POEIK.m  README.md
IK/: InverseKinematics.m
ModernRobotics/: .WeDrive
ModernRobotics/doc/: .WeDrive
ModernRoboticsCpp/: .WeDrive
ModernRoboticsCpp/include/: .WeDrive
ModernRoboticsCpp/src/: .WeDrive  modern_robotics.cpp
ROBOT-KINEMATICS-main/: README.md
ROBOT-KINEMATICS-main/TrajectoryPlan/: beszierCurveToFit.m  beszierCurveToInt.m  bsplineCurveToIntOpenchain.m  data1.txt  data2.txt  wayPoints1.txt
ROBOT-KINEMATICS-main/seven-dof/IK/: ForwardKinematics.m
ROBOT-KINEMATICS-main/six-dof-industrial-robot/: ABB_IRB2600.m
TrajectoryPlan/: bsplineCurveToFit.m  bsplineCurveToInt.m
TrajectoryPlan/SE3-pose-interpolation-using-bspline/: CMakeLists.txt  main.cpp
seven-dof/: FKuseToolBoxforVerify.m  POEFK.m
six-dof-industrial-robot/: ABB_IRB2600.m
